# befunge

./: Cargo.toml
client/: pubspec.yaml
client/lib/: chars.dart  chunks.dart  color.dart  io.dart  rendering.dart  state.dart
client/web/: 404.html  index.html  main.dart  styles.css
src/: main.rs
src/examples/: foo.txt
src/sim/: mod.rs  step.rs  subscription.rs
