[package]
name = "befunge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }
sled = "0.34.7"
serde = { version = "1.0.210", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
slab = "0.4.9"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures-util = { version = "0.3.30", features = ["sink", "std"] }
serde_json = "1.0.128"
base64 = "0.21.7"
